--- a/about.html
+++ b/about.html
@@ -76,9 +76,9 @@
               </h2>
               <p class="fw-semibold "></p>
                 Shimal Agro-Tech & environmental services is private company
-                (RC:193510) registered as an agro-technology and environmental
+                registered as an agro-technology and environmental
                 services organization.<br>
-                Our services include routine garden care, lanscaping, fumigation
+                Our services include routine garden care, lanscaping, eco-friendly fumigation
                  and refuse disposal.
             </div>
           </div>
@@ -100,7 +100,7 @@
               What Behind Shimal environmental management Services 
               </h2>
               <p class="container"></p>
-                We aim to provide residents, corporate organizations, factories
+                We aim to provide residents, corporate organizations, factories, schools, restaurants
                 and the community with access to healthy environmental services at an affordable 
                 rate. 
               </p>
@@ -132,8 +132,8 @@
                                     <!-- <div class="card"> -->
                                         <img class="img-fluid" alt="100%x280" src="./images/team2.png">
                                         <div class="card-body mt-4">
-                                            <h3 class="card-title">leslie Alexander</h3>
-                                            <h6 class="card-text mt-2">Operations Manager</h6>
+                                            <h3 class="card-title"></h3>
+                                            <h6 class="card-text mt-2">CTO</h6>
 
                                         <!-- </div> -->
 
@@ -143,7 +143,7 @@
                                     <!-- <div class="card"> -->
                                         <img class="img-fluid" alt="100%x280" src="./images/team1.png">
                                         <div class="card-body mt-4">
-                                            <h3 class="card-title">Jane Cooper</h3>
+                                            <h3 class="card-title"></h3>
                                             <h6 class="card-text mt-2">Founder/CEO</h6>
 
                                         </div>
@@ -153,12 +153,24 @@
                                     <!-- <div class="card"> -->
                                         <img class="img-fluid" alt="100%x280" src="./images/team3.png">
                                         <div class="card-body mt-4">
-                                            <h4 class="card-title">Wade Warren</h4>
-                                            <h6 class="card-text mt-2">Support Manager</h6>
+                                            <h4 class="card-title"></h4>
+                                            <h6 class="card-text mt-2">COO</h6>
 
                                         </div>
                                     <!-- </div> -->
                                 </div>
+
+                                <div class="col-md-4 mb-5 text-center" id="team">
+                                  <!-- <div class="card"> -->
+                                      <img class="img-fluid" alt="100%x280" src="./images/team3.png">
+                                      <div class="card-body mt-4">
+                                          <h4 class="card-title"></h4>
+                                          <h6 class="card-text mt-2">CFO</h6>
+
+                                      </div>
+                                  <!-- </div> -->
+                              </div>
+
 
                             </div>
                         </div>
@@ -175,7 +187,7 @@
             <img style='height:150px; width:150px;' src="./images/SIMAL_LGOO-1-removebg-preview.png" alt="">
             <div id="footer-logo-text">
               <p class="text-white">
-                  Get access to different sections of the platform throuth 
+                  Get access to different sections of the platform through 
                   provided important links down here.
               </p>
             </div>
@@ -204,9 +216,9 @@
             </div>
             <div class="col-lg-3 col-sm-12 col-md-3 text-white">
               <h4 class="serve mb-3" id="footer-title">Contact</h4>
-              <span class="d-block"><i class="bi bi-telephone  text-white me-2"></i>(+234)9032509094</span>
-              <span class="d-block"><i class="bi bi-envelope  text-white me-2"></i>info@email.com</span>
-              <span class="d-block"><i class="bi bi-geo-alt  text-white  me-2"></i>No.96 Hammadu kafi Quarters, Gombe</span>
+              <span class="d-block"><i class="bi bi-telephone  text-white me-2"></i>(+234)70066521450</span>
+              <span class="d-block"><i class="bi bi-envelope  text-white me-2"></i>info.shimal@gmail.com</span>
+              <span class="d-block"><i class="bi bi-geo-alt  text-white  me-2"></i><No. A12, El-Zamyro Plaza, 11A Isa Kaita Road, Kaduna./span>
             </div>
           </div>
         </div>
