Some contact Changes

--- a/index.html
+++ b/index.html
@@ -333,12 +333,10 @@
         <div class="col-lg-6 col-md-6 col-sm-12 mt-5" id="contact-bg">
           <div class="w-100" id="contact-text">
             <h4 class="fw-bold">
-              Schedule your Services!<br>
-              Contact Us
+              Schedule your services today!<br>
+          
             </h4>
-            <p>
-             Reachout to us quickly throuth the direct messaging box.
-            </p>
+            
             <button class="btn btn-primary" type="submit" id="extra-btn">Book Now</button>
           </div>
         </div>
@@ -378,7 +376,7 @@
             <img style='height:150px; width:150px;' src="./images/SIMAL_LGOO-1-removebg-preview.png" alt="">
             <div id="footer-logo-text">
               <p class="text-white">
-                Get access to different sections of the platform throuth 
+                Get access to different sections of the platform through 
                 provided important links down here.
               </p>
             </div>
@@ -407,9 +405,9 @@
             </div>
             <div class="col-lg-3 col-sm-12 col-md-3 text-white">
               <h4 class="serve mb-3" id="footer-title">Contact</h4>
-              <span class="d-block"><i class="bi bi-telephone  text-white me-2"></i>(+234)9032509094</span>
-              <span class="d-block"><i class="bi bi-envelope  text-white me-2"></i>info@email.com</span>
-              <span class="d-block"><i class="bi bi-geo-alt  text-white  me-2"></i>No.96 Hammadu kafi Quarters, Gombe</span>
+              <span class="d-block"><i class="bi bi-telephone  text-white me-2"></i>(+234)70066521450</span>
+              <span class="d-block"><i class="bi bi-envelope  text-white me-2"></i>info.shimal@gmail.com</span>
+              <span class="d-block"><i class="bi bi-geo-alt  text-white  me-2"></i><No. A12, El-Zamyro Plaza, 11A Isa Kaita Road, Kaduna./span>
             </div>
           </div>
         </div>
