--- a/servicespage.html
+++ b/servicespage.html
@@ -57,7 +57,7 @@
             Our Best Services
         </h1>
         <p class=" fs-4">
-          Our services include routine garden care, lanscaping, fumigation
+          Our services include routine garden care, lanscaping, eco-friendly fumigation
           and refuse disposal.
             </p>
       </div>
@@ -88,7 +88,7 @@
         </div>
         <h3 class="fs-2">Garden & Lawn Care</h3>
         <p>
-           We ensure your garden and lawn stay healthy,By outsourcing 
+           We ensure your garden and lawn stay healthy, by outsourcing 
            your garden and lawn care needs, you can save time and effort while 
            ensuring your outdoor space receives the attention it deserves. 
            You can also benefit from expert advice on plant selection, soil care, and other gardening techniques.
@@ -136,9 +136,9 @@
             </h3>
             <p class="fs-4">
               we provide our services in several places.
-               reach to us at any moment for any service of your need.
+               Reach to us at any moment for any service of your need.
                we will love to make your enviroment
-              adorable and convinient. we can provide you with the Best 
+              adorable and convinient. We can provide you with the best 
               services at reasonable rate.
             </p>
             <div class="btn-group m-4" role="group" aria-label="Third group">
