--- a/about.html
+++ b/about.html
@@ -130,9 +130,9 @@
 
                                 <div class="col-md-4 mb-5 text-center" id="team">
                                     <!-- <div class="card"> -->
-                                        <img class="img-fluid" alt="100%x280" src="./images/team2.png">
+                                        <img class="img-fluid" alt="100%x280" src="">
                                         <div class="card-body mt-4">
-                                            <h3 class="card-title"></h3>
+                                            <h4 class="card-title"></h4>
                                             <h6 class="card-text mt-2">CTO</h6>
 
                                         <!-- </div> -->
@@ -141,9 +141,9 @@
                                 </div>
                                 <div class="col-md-4 mb-5 text-center ">
                                     <!-- <div class="card"> -->
-                                        <img class="img-fluid" alt="100%x280" src="./images/team1.png">
+                                        <img class="img-fluid" alt="100%x280" src="">
                                         <div class="card-body mt-4">
-                                            <h3 class="card-title"></h3>
+                                            <h4 class="card-title"></h4>
                                             <h6 class="card-text mt-2">Founder/CEO</h6>
 
                                         </div>
@@ -151,7 +151,7 @@
                                 </div>
                                 <div class="col-md-4 mb-5 text-center" id="team">
                                     <!-- <div class="card"> -->
-                                        <img class="img-fluid" alt="100%x280" src="./images/team3.png">
+                                        <img class="img-fluid" alt="100%x280" src="">
                                         <div class="card-body mt-4">
                                             <h4 class="card-title"></h4>
                                             <h6 class="card-text mt-2">COO</h6>
@@ -162,7 +162,7 @@
 
                                 <div class="col-md-4 mb-5 text-center" id="team">
                                   <!-- <div class="card"> -->
-                                      <img class="img-fluid" alt="100%x280" src="./images/team3.png">
+                                      <img class="img-fluid" alt="100%x280" src="">
                                       <div class="card-body mt-4">
                                           <h4 class="card-title"></h4>
                                           <h6 class="card-text mt-2">CFO</h6>
@@ -170,6 +170,17 @@
                                       </div>
                                   <!-- </div> -->
                               </div>
+
+                              <div class="col-md-4 mb-5 text-center" id="team">
+                                <!-- <div class="card"> -->
+                                    <img class="img-fluid" alt="100%x280" src="">
+                                    <div class="card-body mt-4">
+                                        <h4 class="card-title"></h4>
+                                        <h6 class="card-text mt-2">Head of Sales</h6>
+
+                                    </div>
+                                <!-- </div> -->
+                            </div>
 
 
                             </div>
@@ -202,23 +213,23 @@
         <div class="col-lg-8 col-sm-12 col-md-8 mt-5 ms-0">
           <div class="row ms-0">
             <div class="col-lg-3 col-sm-12 col-md-3 text-white">
-              <h4 class="serve mb-3 " id="footer-title">Services</h4>
-              <a href="#" class="d-block my-2 text-white fw-bold">House Cleaning</a>
-              <a href="#" class="d-block my-2 text-white ">Office Cleaning</a>
-              <a href="#" class="d-block my-2 text-white ">Enviromental Cleaning</a>
+              <h4 class="serve mb-3" id="footer-title">Services</h4>
+              <a href="#" class="d-block my-2 text-white fw-bold">Refuse Collections</a>
+              <a href="#" class="d-block my-2 text-white ">Garden Care</a>
+              <a href="#" class="d-block my-2 text-white ">Eco-Friendly Fumigation</a>
             </div>
             <div class="col-lg-3 col-sm-12 col-md-3 text-white">
               <h4 class="serve mb-3" id="footer-title">Useful Links</h4>
-              <a href="/" class="d-block my-2 text-white fw-2">Home</a>
+              <a href="index.html" class="d-block my-2 text-white fw-2">Home</a>
               <a href="servicespage.html" class="d-block my-2 text-white fw-2">Services</a>
-              <a href="about.css" class="d-block my-2 text-white fw-2">About Us</a>
+              <a href="about.html" class="d-block my-2 text-white fw-2">About Us</a>
               <a href="contact.html" class="d-block my-2 text-white fw-2">Contact Us</a>
             </div>
             <div class="col-lg-3 col-sm-12 col-md-3 text-white">
               <h4 class="serve mb-3" id="footer-title">Contact</h4>
-              <span class="d-block"><i class="bi bi-telephone  text-white me-2"></i>(+234)70066521450</span>
-              <span class="d-block"><i class="bi bi-envelope  text-white me-2"></i>info.shimal@gmail.com</span>
-              <span class="d-block"><i class="bi bi-geo-alt  text-white  me-2"></i><No. A12, El-Zamyro Plaza, 11A Isa Kaita Road, Kaduna./span>
+              <span class="d-block"><i class="bi bi-telephone  text-white me-2"></i>(+234)9032509094</span>
+              <span class="d-block"><i class="bi bi-envelope  text-white me-2"></i>info@email.com</span>
+              <span class="d-block"><i class="bi bi-geo-alt  text-white  me-2"></i>No.96 Hammadu kafi Quarters, Gombe</span>
             </div>
           </div>
         </div>
