--- a/index.html
+++ b/index.html
@@ -392,9 +392,9 @@
           <div class="row ms-0">
             <div class="col-lg-3 col-sm-12 col-md-3 text-white">
               <h4 class="serve mb-3" id="footer-title">Services</h4>
-              <a href="#" class="d-block my-2 text-white fw-bold">House Cleaning</a>
-              <a href="#" class="d-block my-2 text-white ">Office Cleaning</a>
-              <a href="#" class="d-block my-2 text-white ">Enviromental Cleaning</a>
+              <a href="#" class="d-block my-2 text-white fw-bold">Refuse Collections</a>
+              <a href="#" class="d-block my-2 text-white ">Garden Care</a>
+              <a href="#" class="d-block my-2 text-white ">Eco-Friendly Fumigation</a>
             </div>
             <div class="col-lg-3 col-sm-12 col-md-3 text-white">
               <h4 class="serve mb-3" id="footer-title">Useful Links</h4>
@@ -405,9 +405,9 @@
             </div>
             <div class="col-lg-3 col-sm-12 col-md-3 text-white">
               <h4 class="serve mb-3" id="footer-title">Contact</h4>
-              <span class="d-block"><i class="bi bi-telephone  text-white me-2"></i>(+234)70066521450</span>
-              <span class="d-block"><i class="bi bi-envelope  text-white me-2"></i>info.shimal@gmail.com</span>
-              <span class="d-block"><i class="bi bi-geo-alt  text-white  me-2"></i><No. A12, El-Zamyro Plaza, 11A Isa Kaita Road, Kaduna./span>
+              <span class="d-block"><i class="bi bi-telephone  text-white me-2"></i>(+234)9032509094</span>
+              <span class="d-block"><i class="bi bi-envelope  text-white me-2"></i>info@email.com</span>
+              <span class="d-block"><i class="bi bi-geo-alt  text-white  me-2"></i>No.96 Hammadu kafi Quarters, Gombe</span>
             </div>
           </div>
         </div>
