--- a/servicespage.html
+++ b/servicespage.html
@@ -224,9 +224,9 @@
         <div class="row ms-0">
           <div class="col-lg-3 col-sm-12 col-md-3 text-white">
             <h4 class="serve mb-3" id="footer-title">Services</h4>
-            <a href="#" class="d-block my-2 text-white fw-bold">House Cleaning</a>
-            <a href="#" class="d-block my-2 text-white ">Office Cleaning</a>
-            <a href="#" class="d-block my-2 text-white ">Enviromental Cleaning</a>
+            <a href="#" class="d-block my-2 text-white fw-bold">Refuse Collections</a>
+            <a href="#" class="d-block my-2 text-white ">Garden Care</a>
+            <a href="#" class="d-block my-2 text-white ">Eco-Friendly Fumigation</a>
           </div>
           <div class="col-lg-3 col-sm-12 col-md-3 text-white">
             <h4 class="serve mb-3" id="footer-title">Useful Links</h4>
