--- a/servicespage.html
+++ b/servicespage.html
@@ -237,9 +237,9 @@
           </div>
           <div class="col-lg-3 col-sm-12 col-md-3 text-white">
             <h4 class="serve mb-3" id="footer-title">Contact</h4>
-            <span class="d-block"><i class="bi bi-telephone  text-white me-2"></i>(+234)9032509094</span>
-            <span class="d-block"><i class="bi bi-envelope  text-white me-2"></i>info@email.com</span>
-            <span class="d-block"><i class="bi bi-geo-alt  text-white  me-2"></i>No.96 Hammadu kafi Quarters, Gombe</span>
+            <span class="d-block"><i class="bi bi-telephone  text-white me-2"></i>(+234)7066521450</span>
+            <span class="d-block"><i class="bi bi-envelope  text-white me-2"></i>info.shimal@gmail.com</span>
+            <span class="d-block"><i class="bi bi-geo-alt  text-white  me-2"></i>No. A12 El-Zamyro Plaza, 11A Isah Kaita Road, Kaduna.</span>
           </div>
         </div>
       </div>
