--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         <div id="loop1">
           <h2>
             For you enviromental<br />
-            management services.
+            Management services.
           </h2>
           <p>
-            Refuse Collection, Garden care and Fumigation.
+            Refuse Collection, Garden care and Eco-friendly Fumigation.
           </p>
           <div style="margin-top: 35px">
             <button type="button" class="btn btn-primary">Book Now</button>
@@ -150,7 +150,7 @@
           <img src="images/Group 20.png" alt="" />
           <h3>Easy Online Booking</h3>
           <p class="fs-6">
-            Book a professional cleaner quickly and conveniently with easy online booking. 
+            Book an agent quickly and conveniently with easy online booking. 
             Enjoy a clean and hygienic living space without the hassle.
           </p>
         </div>
@@ -158,7 +158,7 @@
           <img src="images/Group 18.png" alt="" />
           <h3>Get An Agent</h3>
           <p class="fs-6">
-            Get a cleaner to take care of your cleaning needs and enjoy a 
+            Schedule your services and enjoy a 
             hygienic and organized living space without the hassle.
           </p>
         </div>
@@ -392,7 +392,7 @@
           <div class="row ms-0">
             <div class="col-lg-3 col-sm-12 col-md-3 text-white">
               <h4 class="serve mb-3" id="footer-title">Services</h4>
-              <a href="#" class="d-block my-2 text-white fw-bold">Refuse Collections</a>
+              <a href="#" class="d-block my-2 text-white ">Refuse Collection</a>
               <a href="#" class="d-block my-2 text-white ">Garden Care</a>
               <a href="#" class="d-block my-2 text-white ">Eco-Friendly Fumigation</a>
             </div>
