--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
 
                                 <div class="col-md-4 mb-5 text-center" id="team">
                                     <!-- <div class="card"> -->
-                                        <img class="img-fluid" alt="100%x280" src="./images/team/IMG_3180-removebg-preview.png">
+                                        <img class="img-fluid" alt="100%x280" src="./images/team/Mubarak.jpg">
                                         <div class="card-body mt-4">
                                             <h4 class="card-title"></h4>
                                             <h6 class="card-text mt-2">CTO</h6>
@@ -141,7 +141,7 @@
                                 </div>
                                 <div class="col-md-4 mb-5 text-center ">
                                     <!-- <div class="card"> -->
-                                        <img class="img-fluid" alt="100%x280" src="./images/team/IMG_3180-removebg-preview.png">
+                                        <img class="img-fluid" alt="100%x280" src="./images/team/Khalifa.png">
                                         <div class="card-body mt-4">
                                             <h4 class="card-title"></h4>
                                             <h6 class="card-text mt-2">Founder/CEO</h6>
@@ -151,7 +151,7 @@
                                 </div>
                                 <div class="col-md-4 mb-5 text-center" id="team">
                                     <!-- <div class="card"> -->
-                                        <img class="img-fluid" alt="100%x280" src="">
+                                        <img class="img-fluid" alt="100%x280" src="./images/team/YY.jpg">
                                         <div class="card-body mt-4">
                                             <h4 class="card-title"></h4>
                                             <h6 class="card-text mt-2">COO</h6>
@@ -162,7 +162,7 @@
 
                                 <div class="col-md-4 mb-5 text-center" id="team">
                                   <!-- <div class="card"> -->
-                                      <img class="img-fluid" alt="100%x280" src="">
+                                      <img class="img-fluid" alt="100%x280" src="./images/team/Khalil.jpg">
                                       <div class="card-body mt-4">
                                           <h4 class="card-title"></h4>
                                           <h6 class="card-text mt-2">CFO</h6>
